# SoundBox

./: CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
azure/: all-pipelines.yml  linux.yml  mac_os.yml  windows.yml
source/: .gitignore  AlternateBuild.md  CMakeLists.txt  README.md  build.sh  main.cpp  play.cpp  sounds.cpp  sounds.hpp
source/docs/: SetupInstructions.md
win_samples/: CMakeLists.txt
win_samples/RenderExclusiveEventDriven/: CMakeLists.txt  MY_README.md
