##
## This file is part of the SoundBox Project.
## Author: Graham Smith
##
## This work is licensed under the terms of the MIT license.
## For a copy, see <https://opensource.org/licenses/MIT>.
##

add_executable(renderExED
    stdafx.cpp
    WASAPIRenderer.cpp
    WASAPIRenderExclusiveEventDriven.cpp
    )